correct alignment of box contents/boxes

--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,8 @@
     border: 1px solid black;
     font-size: 48px;
     justify-content: center;
+    align-content: center;
     display: grid;
-}
-
-.x,
-.o {
-    justify-self: center;
-    align-self: center;
 }
 
 .x {
